--- a/styles/sass/partials/_ueditor-inserts.scss
+++ b/styles/sass/partials/_ueditor-inserts.scss
@@ -145,7 +145,7 @@ i.upfront-icon.upfront-icon-region-remove:before{
 }
 
 .upfront-inline-panel-item i.upfront-icon.upfront-icon-region-caption:before{
-  background-position: -809px -71px;
+  background-position: -809px -73px;
 }
 
 .upfront-inline-panel-item.active i.upfront-icon.upfront-icon-region-caption:before{
